--- a/demos/endurance/Cargo.toml
+++ b/demos/endurance/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sdl2 = {version = "0.32.2", features = ["ttf"]}
+sdl2 = {version = "0.32.2", features = ["ttf", "gfx"]}
 rand = "0.7.2"
