--- a/demos/endurance/Cargo.toml
+++ b/demos/endurance/Cargo.toml
@@ -14,5 +14,5 @@ rand = "0.7.2"
 git = "https://github.com/bjz/gl-rs"
 
 # For perf tuning
-# [profile.release]
-# debug = true
+[profile.release]
+debug = true
